--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+
+report_daily*
+com.user.*.plist
+*.err
+*.log
+*.db
+
+monitor_env
+
 # C extensions
 *.so
 
