--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,7 @@ matplotlib>=3.5.0
 scikit-learn>=1.0.2
 rumps==0.4.0
 Flask==3.1.0
-# Install requests for API calls
-requests>=2.25.0
+colorama>=0.4.4
+tabulate>=0.9.0
+wcwidth>=0.2.6
+
